package typed.protocol;

// 请求本服赛玩家数据
message smsg_request_qualify_player_fight_data
{
	repeated uint64 player_guid						= 1;
}

// 传输本服赛玩家战斗相关数据
message smsg_deliver_qualify_player_fight_data
{
	required uint64 object_guid						= 1;
	required string object_stream					= 2;
}

// 开始传输玩家数据
// message smsg_deliver_qualify_player_fight_data_start		无消息体，guid为玩家guid

// 单个本服赛玩家数据传输完毕
// message smsg_deliver_qualify_player_fight_data_finish	无消息体，guid为玩家guid

// 单服赛请求加载玩家数据
message pmsg_request_qualify_player_fight_data
{
	required uint32 notify_opcode					= 1;
	repeated uint64 player_guid						= 2;
}

// 单服赛玩家数据清理
// message pmsg_clear_qualify_player_fight_data 无消息体

// 单服赛玩家数据加载完成
// message nmsg_request_qualify_player_fight_data_finish 无消息体，通知消息为pmsg_request_qualify_player_fight_data传递的notify_opcode